<resources>
    <string name="app_name">Haven</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_text">Have an account? Log in here.</string>
    <string name="registration_text">No account? Register here.</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string-array name="account_types_array">
        <item>User</item>
        <item>Shelter Employee</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_shelter_detail">ShelterDetailActivity</string>
    <string name="vacancies_desc">Vacancies</string>
    <string name="vacancies">Vacancies</string>
    <string name="spots">spots</string>
    <string name="claim">Claim</string>
    <string name="release">Release</string>
    <string name="notes">Notes</string>
    <string name="restrictions">Restrictions</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="filter_button_desc">Filter Button</string>
    <string name="title_main_activity">MainActivity</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="none">None</string>
    <string name="age">Age</string>
    <string name="families">Families</string>
    <string name="families_with_newborns">Families with Newborns</string>
    <string name="children">Children</string>
    <string name="young_adults">Young Adults</string>
    <string name="anyone">Anyone</string>
    <string name="veteran">Veteran</string>
    <string name="shelter_name">Shelter Name</string>
    <string name="information">Information</string>
    <string name="search">Search</string>
</resources>
